# hpc

./: sync_09.sh
01_lab/: .mat_mult.cpp.swo  .mat_mult.cpp.swp  Makefile  hello_world  mat_mult  mat_mult.cpp
02_lab/: ;  pi  pi.cpp  pi.cpp~  run_experiments.sh  run_experiments.sh~
03_lab/: Makefile
03_lab/deviceQuery/: Makefile  deviceQuery
03_lab/julia/: Makefile  gpujulia.cu
03_lab/julia/common/: cpu_bitmap.h
03_lab/stencil/: Makefile  run_experiments.sh  stencil  stencil.cu
04_lab/raytrace/: Makefile  raytrace  raytrace.cu
04_lab/raytrace/common/: cpu_bitmap.h
04_lab/synchro/: sharedsum  sharedsum.cu
04_lab/texture/: textureheat
05_lab/plm/: plm  plm_v2  plm_v2.cu
05_lab/streams/: double  double.cu  single
07_lab/: .hello-world-seq.c.swp  Makefile  benchmark-325846.err  benchmark-325846.out  benchmark-325849.out  benchmark-325856.err  benchmark-325856.out  benchmark-325861.err  benchmark-325861.out  benchmark-325862.err  benchmark-325862.out  benchmark-325901.err  benchmark-325902.err  benchmark-325902.out  benchmark-325905.err  benchmark-325905.out  benchmark-325906.err  benchmark-325906.out  benchmark-325907.err  benchmark-325907.out  benchmark-325911.err  benchmark-325911.out  benchmark-325925.err  benchmark-325925.out  benchmark-325934.err  benchmark-325934.out  benchmark-325940.err  benchmark-325940.out  benchmark-325964.err  benchmark-325969.err  benchmark-325973.err  benchmark-325981.err  benchmark-325981.out  benchmark-325985.out  benchmark-latency.c  benchmark.batch  benchmark.sh  hello-world-seq.c  hello-world.batch  mim-hello-325137.out
08_lab/: Makefile  floyd-warshall-par.cpp  graph-utils-par.cpp  hello-world-bcast-par.cpp
09_lab/: CMakeLists.txt  laplace-par.cpp  laplace-par.v1.cpp  laplace-par.v2.cpp  laplace-seq.cpp  report.txt  run.batch
09_lab/mpi-lab-03-e/: laplace-common.cpp  laplace-par.cpp
10_lab/floyd-warshall/: Makefile  floyd-warshall-par.cpp
cuda_homework/examples/pathfinding/: simple_100.in  simple_1000.in  simple_10000.in  simple_unreachable.in  simple_unreachable_1000.in  simple_unreachable_10000.in
cuda_homework/examples/slidingpuzzle/: generator.py  simple_1.in  simple_10.in  simple_15.in  simple_2.in  simple_20.in  simple_25.in  simple_3.in  simple_30.in  simple_35.in  simple_4.in  simple_40.in  simple_5.in  simple_6.in  simple_7.in
cuda_homework/report/: tk359746_report.aux  tk359746_report.tex
cuda_homework/source/: .gitignore  Makefile  astar_gpu  astar_gpu.cu  config.h  errors.h  hashtable.cuh  heap.cuh  heap_cpu  heap_cpu.cpp  lock.cuh  memory.h  pathfinding.cu  pathfinding.cuh  pathfinding.h  queues.cuh  simple.out  slidingpuzzle.cu  slidingpuzzle.cuh  solver.cuh
mpi_homework/examples/: generator.py  sample_10000_000  sample_1000_000  sample_100_000  sparse_simple
mpi_homework/report/: report.aux  report.tex
mpi_homework/report/charts/: 100000_100_2.csv  50000_1000_5.csv  50000_1000_weak.csv  charts.ipynb
mpi_homework/source/: .clang-format  .gitignore  CMakeLists.txt  Makefile  communication.cpp  communication.h  config.h  create_jobs.py  densematgen.cpp  densematgen.h  errors.h  gathering.cpp  initialization.cpp  math.cpp  math.h  matrix.cpp  matrix.h  matrixmul.cpp  matrixmul.h  mpigroup.h  multiplication.cpp  replication.cpp  run.batch  setenv.sh  utils.h
mpi_homework/source/cmake/: FindMKL.cmake
